2000-03-10  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Expression.java:
	* src/jacl/tcl/lang/StringCmd.java:
	* src/jacl/tcl/lang/Util.java: Got rid of the
	Util.isLetterOrDigit() method. It was a workaround
	for a bug in the Microsoft JVM. Since we do not
	support the Microsoft JVM and it does not exist
	anymore, there is no reason to leave this bug
	workaround in the code.

2000-03-01  Mo DeJong  <mdejong@redhat.com>

	* diffs.txt:
	* new_features.txt:
	* src/jacl/tcl/lang/BinaryCmd.java:
	* src/jacl/tcl/lang/TclByteArray.java:
	* tests/tcl/binary.test:
	* src/jacl/tcl/lang/Interp.java: Added implementation
	of Tcl's binary comand to Jacl. The implementation was donated
	by Christian Krone <krischan@sql.de>.

2000-03-01  Mo DeJong  <mdejong@redhat.com>

	* README.jacl:
	* README.tclblend: Updated Team member names.

2000-02-23  Mo DeJong  <mdejong@redhat.com>

	* src/tclblend/tcl/lang/Interp.java: Removed old code
	that was commented out. Fixed comments.

2000-02-23  Mo DeJong  <mdejong@redhat.com>

	* unix/configure.in: improved the error message displayed when
	the directory given by --with-tcl does not exist by adding
	the name of the directory we are searching for to the err msg.	

2000-02-23  Mo DeJong  <mdejong@redhat.com>

	* docs/cFunctions.html:
	* docs/TclJavaLib/Eval.htm:
	* src/jacl/tcl/lang/ConsoleEvent.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/library/history.tcl:
	* src/jacl/tcl/lang/library/init.tcl: Added implementation of
	the history command to Jacl. The implementation was donated
	by Christian Krone <krischan@sql.de>.

2000-02-23  Mo DeJong  <mdejong@redhat.com>

	* README.jacl:
	* diffs.txt:
	* new_features.txt:
	* unix/Makefile.in:
	* src/jacl/tcl/lang/RegexpCmd.java:
	* src/jacl/tcl/lang/RegsubCmd.java:
	* src/jacl/tcl/lang/Util.java:
	* src/jacl/sunlabs/brazil/util/regexp/Regexp.java:
	* src/jacl/sunlabs/brazil/util/regexp/Regsub.java:
	* src/jacl/tcl/lang/TclRegexp.java: Added new regular